--- a/src/style.css
+++ b/src/style.css
@@ -15,8 +15,9 @@ body,
 {
     display: flex;
     align-items: center;
-    /* justify-content: center; */
+    justify-content: center;
     flex-direction: column;
+    padding-top: 20%;
 }
 
 .nameHeader
@@ -24,7 +25,7 @@ body,
     font-size: 15rem;
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
     line-height: 12rem;
-
+    margin: 0;
 }
 
 .canvas
