--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,13 @@ body,
     margin: 0;
 }
 
+.titlesContainer
+{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
 .canvas
 {
     position: absolute;
